# fc-py-inferia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  fc-pipelines.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pr-tests.yaml  publish-to-pypi-and-test-pypi.yml  publish-to-pypi.yaml
cogito/: __init__.py  cli.py
cogito/api/: handlers.py  responses.py
cogito/commands/: initialize.py  scaffold_predict.py  version.py
cogito/core/: app.py  config.py  exceptions.py  models.py  utils.py
cogito/templates/: predict_class_template.jinja2
examples/: cogito.yaml  example.py  fastapi_sandbox.py  inferia.yaml  predict.py  usage.ipynb
inferia/: __init__.py  cli.py
inferia/api/: handlers.py
inferia/commands/: run.py
inferia/core/: app.py  config.py  exceptions.py  metrics.py  utils.py
inferia/core/utils/: model_downloader.py
tests/commands/: test_initialize.py
tests/core/utils/: test_get_return_signature.py  test_validate_and_wrap_handler.py  test_wrap_handler.py
